Revise format for the content

--- a/cooperation-details.html
+++ b/cooperation-details.html
@@ -46,11 +46,11 @@
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
-      <h1 class="sitename">Chen-Yi Yang</h1>
+      <h1 class="sitename">Chen-Yi Yang, Ph.D.</h1>
     </a>
 
     <div class="social-links text-center">
-      <span>楊真宜 (Karen)</span>
+      <span>楊真宜 博士 (Karen)</span>
     </div>
 
     <nav id="navmenu" class="navmenu">
@@ -85,16 +85,22 @@
     <section id="service-details" class="service-details section">
       <div class="container">
         <div class="row gy-4">
-          <div class="col-lg-12" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
+            <div class="services-list">
+              <img src="assets/img/photo-1.jpg" alt="" class="img-fluid services-img">
+              <img src="assets/img/photo-2.jpg" alt="" class="img-fluid services-img">
+            </div>
+          </div>
+          <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
             <h3>產學合作計畫 Industry-university Cooperation Projects</h3>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span>英語補習教育實務人才培育計畫(互動美語北屯分公司) | 計畫主持人 | 台中市私立希伯崙文股份有限公司 | 2024 - 2025</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>英語補習教育實務人才培育計畫(佳音太平分校) | 計畫主持人 | 台中市私立喬伊美語短期補習班 | 2024 - 2025</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>英語補習教育實務人才培育計畫(夏恩英語) | 計畫主持人 | 台中市私立琳達文理短期補習班 | 2024 - 2025</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>英語補習教育實務人才培育計畫(琳達) | 計畫主持人 | 台中市私立琳達文理短期補習班 | 2024 - 2025</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>英語補習教育實務人才培育計畫(新高穩瑩) | 計畫主持人 | 台中市私立獅子王文理短期補習班 | 2024 - 2025</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>英語補習教育實務人才培育計畫(獅子王1) | 計畫主持人 | 台中市私立獅子王文理短期補習班 | 2024 - 2025</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>英語補習教育實務人才培育計畫(獅子王2) | 計畫主持人 | 台中市私立獅子王文理短期補習班 | 2024 - 2025</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>英語補習教育實務人才培育計畫(互動美語北屯分公司) | 計畫主持人 | 台中市私立希伯崙文股份有限公司 | 2024 - 2025</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>英語補習教育實務人才培育計畫(佳音太平分校) | 計畫主持人 | 台中市私立喬伊美語短期補習班 | 2024 - 2025</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>英語補習教育實務人才培育計畫(夏恩英語) | 計畫主持人 | 台中市私立琳達文理短期補習班 | 2024 - 2025</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>英語補習教育實務人才培育計畫(琳達) | 計畫主持人 | 台中市私立琳達文理短期補習班 | 2024 - 2025</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>英語補習教育實務人才培育計畫(新高穩瑩) | 計畫主持人 | 台中市私立獅子王文理短期補習班 | 2024 - 2025</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>英語補習教育實務人才培育計畫(獅子王1) | 計畫主持人 | 台中市私立獅子王文理短期補習班 | 2024 - 2025</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>英語補習教育實務人才培育計畫(獅子王2) | 計畫主持人 | 台中市私立獅子王文理短期補習班 | 2024 - 2025</span></li>
             </ul>
         </div>
       </div>
