--- a/index.html
+++ b/index.html
@@ -96,10 +96,9 @@
             <img src="assets/img/my-profile-full.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
-            <h2>Assistant Professor &amp; Sociolinguist</h2>
-            <p class="fst-italic py-3">
-              (TBD) I am interested in the field of sociolinguistics, especially in the subfield, such as language use and shift, language maintenance and loss, language attitude and identity, language revitalization, language policy and planning, etc. I think that language is not only a tool for communication, but also a medium to reflect different cultures, societies and historical backgrounds. Every language has its own uniqueness and should be preserved and passed down.
-            </p>
+            <h2>Assistant Professor & Sociolinguist</h2>
+            <p>(by ChatGPT, TBD) 我對<b>社會語言學</b>領域感興趣，特別是其中的<b>語言使用與轉變</b>、<b>語言維持與流失</b>、<b>語言態度與身份認同</b>、<b>語言復興</b>、<b>語言政策與規劃</b>等子領域。我認為<b>語言不僅是溝通的工具，更是反映不同文化、社會與歷史背景的媒介</b>。每種語言都有其獨特性，應該被保存並傳承下去。</p>
+            <p>I am interested in the field of sociolinguistics, especially in the subfield, such as language use and shift, language maintenance and loss, language attitude and identity, language revitalization, language policy and planning, etc. I think that language is not only a tool for communication, but also a medium to reflect different cultures, societies and historical backgrounds. Every language has its own uniqueness and should be preserved and passed down.</p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
@@ -149,15 +148,19 @@
             <div class="resume-item">
               <h4>國立清華大學語言學研究所博士</h4>
               <h6>Ph.D., Linguistics</h6>
-              <p><em>National Tsing Hua University, Hsinchu City, Taiwan.</em></p>
-              <p>[Dissertation] <em>A Study of Taiwan Junior High Students' Language Proficiency, Use, and Attitude: Mandarin Chinese, Indigenous Languages, and English.</em></p>
+              <h6>National Tsing Hua University, Hsinchu City, Taiwan.</h6>
+              <ul style="list-style-type: none;">
+                <li><i class="bi bi-file-earmark-medical"></i> [Dissertation] <em>A Study of Taiwan Junior High Students' Language Proficiency, Use, and Attitude: Mandarin Chinese, Indigenous Languages, and English.</em></li>
+              </ul>
             </div>
 
             <div class="resume-item">
               <h4>靜宜大學英國語文學系碩士</h4>
               <h6>MA, English Language, Literature and Linguistics</h6>
-              <p><em>Providence University, Taichung City, Taiwan.</em></p>
-              <p>[Thesis] <em>Sociolinguistic Variation of Mandarin Chinese /f/ and /hw/ in Taiwan.</em></p>
+              <h6>Providence University, Taichung City, Taiwan.</h6>
+              <ul style="list-style-type: none;">
+                <li><i class="bi bi-file-earmark-medical"></i> [Thesis] <em>Sociolinguistic Variation of Mandarin Chinese /f/ and /hw/ in Taiwan.</em></li>
+              </ul>
             </div>
 
             <h3 class="resume-title">Oversea</h3>
@@ -166,51 +169,65 @@
               <h4>美國夏威夷大學語言學系 | 訪問學人</h4>
               <h5>2013 - 2014</h5>
               <p><em>Visiting Scholar, Department of Linguistics, University of Hawaiꞌi at Mānoa.</em></p>
-              <ul>
-                <li>Teaching and learning an endangered language in Taiwan.</li>
-                <li>The Role and Current Situation of New Immigrants' Languages in Taiwan.</li>
-                <li>A Survey of Junior High Students’ Language Proficiency, Use and Attitude in Taiwan: Mandarin Chinese, Indigenous Languages and English.</li>
-                <li>(TBD)</li>
+              <ul style="list-style-type: none;">
+                <li><i class="bi bi-pin-angle"></i> Teaching and learning an endangered language in Taiwan</li>
+                <li><i class="bi bi-pin-angle"></i> The Role and Current Situation of New Immigrants' Languages in Taiwan</li>
+                <li><i class="bi bi-pin-angle"></i> A Survey of Junior High Students' Language Proficiency, Use and Attitude in Taiwan: Mandarin Chinese, Indigenous Languages and English</li>
               </ul>
             </div>
 
             <h3 class="resume-title">Academic Awards</h3>
             <div class="resume-item pb-0">
               <h4>國立勤益科技大學推動研究發展績效獎</h4>
-              <p>（<em>核心證照獎, 2023</em>）</p>
+              <p><em>[English]</em></p>
+              <ul style="list-style-type: none;"><li><i class="bi bi-check2-circle"></i> 核心證照獎 (2023)</li></ul>
               <h4>國科會獎勵博士候選人撰寫博士論文獎</h4>
               <p><em>Doctoral Dissertation Fellowships for the Humanities and Social Sciences</em></p>
-              <p>（<em>國科會 104-2420-H-007-008-DR, 2015</em>）</p>
+              <ul style="list-style-type: none;"><li><i class="bi bi-check2-circle"></i> 國科會 104-2420-H-007-008-DR (2015)</li></ul>
               <h4>國科會補助博士生赴國外研究「千里馬計畫」</h4>
               <p><em>Scholarship of the Graduate Students Study Abroad Program</em></p>
-              <p>（<em>國科會 102-2917-I-007-026, 2012</em>）</p>
+              <ul style="list-style-type: none;"><li><i class="bi bi-check2-circle"></i> 國科會 102-2917-I-007-026 (2012)</li></ul>
               <h4>語言學研究生獎學金</h4>
               <p><em>Scholarship of the Linguistic Graduate Students, The Language Training & Testing Center</em></p>
-              <p>（<em>財團法人語言訓練測驗中心 LTTC, 2011</em>）</p>
+              <ul style="list-style-type: none;"><li><i class="bi bi-check2-circle"></i> 財團法人語言訓練測驗中心 LTTC (2011)</li></ul>
               <h4>年度最佳論文獎</h4>
-              <p>（<em>Award of Annual MA thesis, Providence University, 2008</em>）</p>
+              <p><em>[English]</em></p>
+              <ul style="list-style-type: none;"><li><i class="bi bi-check2-circle"></i> Award of Annual MA thesis, Providence University (2008)</li></ul>
               <h4>國際榮譽大使</h4>
-              <p>（<em>International Honor Ambassador, Office of International Affairs, Providence University, 2008</em>）</p>
+              <p><em>[English]</em></p>
+              <ul style="list-style-type: none;"><li><i class="bi bi-check2-circle"></i> International Honor Ambassador, Office of International Affairs, Providence University (2008)</li></ul>
             </div>
 
             <h3 class="resume-title">Licenses & Certificates</h3>
             <div class="resume-item pb-0">
               <h4><span style="text-transform: none">Teaching Knowledge Test</span> 劍橋英語教師認證</h4>
               <h6>TKT Module 2 | Band 2 Cambridge English</h6>
-              <p><em>證書編號：231TW0400002</em></p>
+              <ul style="list-style-type: none;">
+                <li><i class="bi bi-bookmark-star"></i> 證書編號：231TW0400002</li>
+              </ul>
               <h4>AIL 人工智慧專業級證照</h4>
               <h6>Artificial Intelligence Literacy Certification Programs | Expert</h6>
-              <p><em>證書編號：24-A-AIL-00-ES-886000701</em></p>
+              <ul style="list-style-type: none;">
+                <li><i class="bi bi-bookmark-star"></i> 證書編號：24-A-AIL-00-ES-886000701</li>
+              </ul>
               <h4>AIL 人工智慧基礎級證照</h4>
               <h6>Artificial Intelligence Literacy Certification Programs | Fundamentals</h6>
-              <p><em>證書編號：22-A-AIL-00-FD-886001216</em></p>
+              <ul style="list-style-type: none;">
+                <li><i class="bi bi-bookmark-star"></i> 證書編號：22-A-AIL-00-FD-886001216</li>
+              </ul>
               <h4>新型研發專利</h4>
               <h6>新型名稱：外語口說評分系統</h6>
-              <p><em>專利編號：新型第 M657972 號、專利權期間：2024.07.11 - 2033.12.05</em></p>
+              <ul style="list-style-type: none;">
+                <li><i class="bi bi-bookmark-star"></i> 專利編號：新型第 M657972 號、專利權期間：2024.07.11 - 2033.12.05</li>
+              </ul>
               <h4>中等學校英文科教師證書</h4>
-              <p><em>教師證號：中字檢第 9800102 號</em></p>
+              <ul style="list-style-type: none;">
+                <li><i class="bi bi-bookmark-star"></i> 教師證號：中字檢第 9800102 號</li>
+              </ul>
               <h4>教育部閩南語語言能力認證 (中高級)</h4>
-              <p><em>證書編號：臺語字第 1000211385 號</em></p>
+              <ul style="list-style-type: none;">
+                <li><i class="bi bi-bookmark-star"></i> 證書編號：臺語字第 1000211385 號</li>
+              </ul>
             </div>
           </div>
 
@@ -220,8 +237,8 @@
               <h4>國立勤益科技大學應用英語系 | 助理教授</h4>
               <h5>2022 - Present</h5>
               <p><em>Assistant Professor, Department of Applied English, National Chin-Yi University of Technology, Taichung, Taiwan.</em></p>
-              <ul>
-                <li>(TBD) Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
+              <ul style="list-style-type: none;">
+                <li><i class="bi bi-briefcase"></i> (TBD)</li>
               </ul>
             </div>
 
@@ -229,8 +246,8 @@
               <h4>國立彰化師範大學科學教育研究所 | 博士後研究員</h4>
               <h5>2022 - 2022</h5>
               <p><em>Postdoctoral Researcher, Graduate Institute of Science Education, National Changhua University of Education, Changhua, Taiwan.</em></p>
-              <ul>
-                <li>(TBD) Managed up to 5 projects or tasks at a given time while under pressure</li>
+              <ul style="list-style-type: none;">
+                <li><i class="bi bi-briefcase"></i> (TBD)</li>
               </ul>
             </div>
 
@@ -238,11 +255,10 @@
               <h4>國立清華大學區域創新中心 | 博士後研究員</h4>
               <h5>2021 - 2021</h5>
               <p><em>Postdoctoral Researcher, Regional Innovation Center, National Tsing Hua University, Hsinchu, Taiwan.</em></p>
-              <ul>
-                <li>科技部人文創新與社會實踐計畫</li>
-                <li>新竹智慧城鄉創生計畫：地方活力與能力建構</li>
-                <li>(MOST 108-2420-H-007-010 -HS1)</li>
-                <li>(TBD)</li>
+              <ul style="list-style-type: none;">
+                <li><i class="bi bi-briefcase"></i> 科技部人文創新與社會實踐計畫</li>
+                <li><i class="bi bi-briefcase"></i> 新竹智慧城鄉創生計畫：地方活力與能力建構</li>
+                <li><i class="bi bi-briefcase"></i> 計畫編號：MOST 108-2420-H-007-010-HS1</li>
               </ul>
             </div>
 
@@ -250,9 +266,9 @@
               <h4>國立高雄科技大學外語教育中心 | 助理教授</h4>
               <h5>2019 - 2021</h5>
               <p><em>Assistant Professor, Foreign Language Enducation Center, National Kaohsiung University of Technology, Kaohsiung, Taiwan.</em></p>
-              <ul>
-                <li>授課課程：大學部英文</li>
-                <li>(TBD) Managed up to 5 projects or tasks at a given time while under pressure</li>
+              <ul style="list-style-type: none;">
+                <li><i class="bi bi-briefcase"></i> 授課課程：大學部英文</li>
+                <li><i class="bi bi-briefcase"></i> (TBD)</li>
               </ul>
             </div>
 
@@ -260,11 +276,10 @@
               <h4>國立中山大學社會實踐與發展研究中心 | 博士後研究員</h4>
               <h5>2018 - 2020</h5>
               <p><em>Postdoctoral Researcher, Social Engagement Center, National Sun Yat-sen University, Kaohsiung, Taiwan.</em></p>
-              <ul>
-                <li>科技部人文創新與社會實踐計畫</li>
-                <li>灣岸創生：高雄過渡社區的記憶再現與創新轉型</li>
-                <li>(MOST 107-2420-H-110-004 -HS1)</li>
-                <li>(TBD)</li>
+              <ul style="list-style-type: none;">
+                <li><i class="bi bi-briefcase"></i> 科技部人文創新與社會實踐計畫</li>
+                <li><i class="bi bi-briefcase"></i> 灣岸創生：高雄過渡社區的記憶再現與創新轉型</li>
+                <li><i class="bi bi-briefcase"></i> 計畫編號：MOST 107-2420-H-110-004-HS1</li>
               </ul>
             </div>
 
@@ -272,13 +287,12 @@
               <h4>國立新竹教育大學英語教學系 | 講師</h4>
               <h5>2011 - 2013</h5>
               <p><em>Lecturer, Department of English Instruction, National Hsinchu University of Education, Hsinchu, Taiwan.</em></p>
-              <ul>
-                <li>Reading and Writing English</li>
-                <li>English Proficiency Development</li>
-                <li>Speech and Communication in English</li>
-                <li>Grammar and Writing English</li>
-                <li>Listening and Speaking in English</li>
-                <li>(TBD)</li>
+              <ul style="list-style-type: none;">
+                <li><i class="bi bi-briefcase"></i> Reading and Writing English</li>
+                <li><i class="bi bi-briefcase"></i> English Proficiency Development</li>
+                <li><i class="bi bi-briefcase"></i> Speech and Communication in English</li>
+                <li><i class="bi bi-briefcase"></i> Grammar and Writing English</li>
+                <li><i class="bi bi-briefcase"></i> Listening and Speaking in English</li>
               </ul>
             </div>
           </div>
@@ -288,7 +302,7 @@
     </section><!-- /Experiences Section -->
 
     <!-- Achievements Section -->
-    <section id="achievements" class="Achievements Section">
+    <section id="achievements" class="services section">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
