--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -46,11 +46,11 @@
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
-      <h1 class="sitename">Chen-Yi Yang</h1>
+      <h1 class="sitename">Chen-Yi Yang, Ph.D.</h1>
     </a>
 
     <div class="social-links text-center">
-      <span>楊真宜 (Karen)</span>
+      <span>楊真宜 博士 (Karen)</span>
     </div>
 
     <nav id="navmenu" class="navmenu">
