--- a/publication-details.html
+++ b/publication-details.html
@@ -46,11 +46,11 @@
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
-      <h1 class="sitename">Chen-Yi Yang</h1>
+      <h1 class="sitename">Chen-Yi Yang, Ph.D.</h1>
     </a>
 
     <div class="social-links text-center">
-      <span>楊真宜 (Karen)</span>
+      <span>楊真宜 博士 (Karen)</span>
     </div>
 
     <nav id="navmenu" class="navmenu">
@@ -85,73 +85,79 @@
     <section id="service-details" class="service-details section">
       <div class="container">
         <div class="row gy-4">
-          <div class="col-lg-12" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
+            <div class="services-list">
+              <img src="assets/img/photo-1.jpg" alt="" class="img-fluid services-img">
+              <img src="assets/img/photo-2.jpg" alt="" class="img-fluid services-img">
+            </div>
+          </div>
+          <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
             <h3>學術發表 Acdamic Publications</h3>
             <hr>
             <h5>
               期刊論文 Journal Articles
             </h5>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Yang, Chen-Yi & Lee, Szu-Hsien. The Interaction and Reflection of Soundscape Listening and Local Innovation in Old Zuoying。Sun Yat-sen Journal of Humanities，National Sun Yat-sen University。（審查中）</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Yang, Chen-Yi. (2017). Taiwan's New Southbound Policy and Cultivation of Proficient Language Speakers of Southeast Asian Languages. Taiwan International Studies Quarterly, Vol. 13. No. 4, pp. 143-74.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Yang, Chen-Yi. (2017). A Study on the Current Situation and Role of the Language of New Immigrants’ Children in Taiwan. Languages and International Studies, 17, pp. 127-74. doi:10.3966/181147172017060017005</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>Yang, Chen-Yi & Lee, Szu-Hsien. The Interaction and Reflection of Soundscape Listening and Local Innovation in Old Zuoying。Sun Yat-sen Journal of Humanities，National Sun Yat-sen University。（審查中）</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>Yang, Chen-Yi. (2017). Taiwan's New Southbound Policy and Cultivation of Proficient Language Speakers of Southeast Asian Languages. Taiwan International Studies Quarterly, Vol. 13. No. 4, pp. 143-74.</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>Yang, Chen-Yi. (2017). A Study on the Current Situation and Role of the Language of New Immigrants' Children in Taiwan. Languages and International Studies, 17, pp. 127-74. doi:10.3966/181147172017060017005</span></li>
             </ul>
                         
             <h5>
               研討會論文 Conference Papers
             </h5>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span>楊真宜（2022）。客家年輕世代的語言活力與傳承。第十四屆台灣語言及其教學暨台灣學「蛻變的聲音」國際學術研討會，國立成功大學。</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>李天健、楊真宜、邱星崴（2021）。田野實作與前瞻人才培育。教育部人文社會與科技前瞻人才培育計畫（UFO） 2021 年 UFO 高等教育前瞻研討會。(MOST-108-2420-H-007-010-HSI)</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>楊真宜（2021）。大學社會參與：從「竹北有田」到「竹北有團」。2021新實踐暨臺日國際研討會，科技部。(MOST-108-2420-H-007-010-HSI)</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>楊真宜、李思嫺（2020）。台語歌曲做為擾動記憶及語言文化創生的行動方案。2020新實踐暨臺日國際研討會，科技部。(MOST-107-2420-H-110-004-HSI)</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>楊真宜、李思嫺（2019）。「渡·左營」- 過渡社區的創生與實踐。2019台灣教育學術研討會：跨域、跨界的教育新契機，國立中山大學。</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>楊真宜、李思嫺（2019）。聲景聆聽與地方創生的互動性：以舊左營為例。2019新實踐暨臺日國際研討會，科技部。(MOST-107-2420-H-110-004-HSI)</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>楊真宜（2018）。客家新世代的族語能力與使用情形。第十二屆台灣語言及其教學國際學術研討會，國立中山大學。</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Yang, Chen-Yi. (2017). A Retrospect of the Indigenous Languages Loss in Taiwan and Discussion on Revitalization of Languages. The 5th Young Scholars' Conference on Taiwan Languages, National Taichung University of Education, Taichung, Taiwan, October 13-14, 2017.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Yang, Chen-Yi. (2017). Indigenous Languages Loss in Taiwan: Language Proficiency, Use and Attitude. The First International Conference on Revitalization of Indigenous and Minoritized Languages, Barcelona, Spain.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Yang, Chen-Yi. (2017). The Literature Review and Discussion on Language Loss in Taiwan. The 16th Workshop of Multi-Disciplinary Study of Linguistics, Geography and History, National Taichung University of Education, Taichung, Taiwan, April 16, 2017.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Yang, Chen-Yi. (2016). The Role and Current Situation of New Immigrants' Languages in Taiwan. The 15th EWC International Graduate Student Conference, Hawaii, USA, February 11-13.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Yang, Chen-Yi. (2014). A Survey of Teenager's Language Proficiency, Use and Attitude. The 10th International Symposium on Taiwanese Languages and Teaching, National Cheng Kung University, Taiwan, October 25-26, 2014.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Yang, Chen-Yi. (2014). Indigenous Language Teaching and Learning: From New Immigrant Parents and Children's Viewpoint. The 10th International Symposium on Taiwanese Languages and Teaching, National Cheng Kung University, Taiwan, October 25-26, 2014.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Yang, Chen-Yi. (2014). A Study of Language Proficiency, Use and Attitude of Adolescents in Taiwan. The 13th EWC International Graduate Student Conference, Hawaii, USA, February 13-15.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Yang, Chen-Yi. (2012). A Study of the Language Proficiency, Use and Identification of Teenagers in Taiwan. The 2nd International Symposium on Chinese Language and Discourse, Nanyang Technological University, Singapore.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Yang, Chen-Yi. (2012). The Discourse Analysis of jiushi in Taiwan Mandarin. The 6th Conference on Language, Discourse, and Cognition, National Taiwan University, Taiwan, Taipei, Taiwan.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Yang, Chen-Yi. (2010). The Grammaticalizaiton of Bai in Mandarin Chinese: "do something but get nothing" vs. "do nothing but get something". The 43rd International Conference on Sino-Tibetan Languages and Linguistics, Lund University, Sweden.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Yang, Chen-Yi. (2010). Sociolinguistic Perspectives on Sound Variation of /f/ and /hw/ in Taiwan Mandarin. The 1st International Symposium on Chinese Language and Discourse, UCLA, Los Angeles, USA.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Yang, Chen-Yi. (2008). Sociolinguistic Variation of Mandarin Chinese /f/ and /hw/ in Taiwan. Paper presented at theNational Conference on Linguistics (NCL 2008), National Chiayi University, Taiwan, May 2-3, 2008.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Rau, D. Victoria, Hui-Huan Ann Chang, Yin-Sheng Tai, Chen-Yi Yang, Yi-Hui Lin, Chia-Chi Yang & Maa-Neu Dong. (2007). Teaching and learning an endangered language in Taiwan. Paper presented at the International Conference on Austronesian Endangered Language Documentation, Providence University, Taiwan, June 5-7, 2007. (NSC-95-2411-126-007)</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>楊真宜（2022）。客家年輕世代的語言活力與傳承。第十四屆台灣語言及其教學暨台灣學「蛻變的聲音」國際學術研討會，國立成功大學。</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>李天健、楊真宜、邱星崴（2021）。田野實作與前瞻人才培育。教育部人文社會與科技前瞻人才培育計畫（UFO） 2021 年 UFO 高等教育前瞻研討會。(MOST-108-2420-H-007-010-HSI)</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>楊真宜（2021）。大學社會參與：從「竹北有田」到「竹北有團」。2021新實踐暨臺日國際研討會，科技部。(MOST-108-2420-H-007-010-HSI)</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>楊真宜、李思嫺（2020）。台語歌曲做為擾動記憶及語言文化創生的行動方案。2020新實踐暨臺日國際研討會，科技部。(MOST-107-2420-H-110-004-HSI)</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>楊真宜、李思嫺（2019）。「渡·左營」- 過渡社區的創生與實踐。2019台灣教育學術研討會：跨域、跨界的教育新契機，國立中山大學。</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>楊真宜、李思嫺（2019）。聲景聆聽與地方創生的互動性：以舊左營為例。2019新實踐暨臺日國際研討會，科技部。(MOST-107-2420-H-110-004-HSI)</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>楊真宜（2018）。客家新世代的族語能力與使用情形。第十二屆台灣語言及其教學國際學術研討會，國立中山大學。</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>Yang, Chen-Yi. (2017). A Retrospect of the Indigenous Languages Loss in Taiwan and Discussion on Revitalization of Languages. The 5th Young Scholars' Conference on Taiwan Languages, National Taichung University of Education, Taichung, Taiwan, October 13-14, 2017.</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>Yang, Chen-Yi. (2017). Indigenous Languages Loss in Taiwan: Language Proficiency, Use and Attitude. The First International Conference on Revitalization of Indigenous and Minoritized Languages, Barcelona, Spain.</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>Yang, Chen-Yi. (2017). The Literature Review and Discussion on Language Loss in Taiwan. The 16th Workshop of Multi-Disciplinary Study of Linguistics, Geography and History, National Taichung University of Education, Taichung, Taiwan, April 16, 2017.</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>Yang, Chen-Yi. (2016). The Role and Current Situation of New Immigrants' Languages in Taiwan. The 15th EWC International Graduate Student Conference, Hawaii, USA, February 11-13.</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>Yang, Chen-Yi. (2014). A Survey of Teenager's Language Proficiency, Use and Attitude. The 10th International Symposium on Taiwanese Languages and Teaching, National Cheng Kung University, Taiwan, October 25-26, 2014.</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>Yang, Chen-Yi. (2014). Indigenous Language Teaching and Learning: From New Immigrant Parents and Children's Viewpoint. The 10th International Symposium on Taiwanese Languages and Teaching, National Cheng Kung University, Taiwan, October 25-26, 2014.</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>Yang, Chen-Yi. (2014). A Study of Language Proficiency, Use and Attitude of Adolescents in Taiwan. The 13th EWC International Graduate Student Conference, Hawaii, USA, February 13-15.</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>Yang, Chen-Yi. (2012). A Study of the Language Proficiency, Use and Identification of Teenagers in Taiwan. The 2nd International Symposium on Chinese Language and Discourse, Nanyang Technological University, Singapore.</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>Yang, Chen-Yi. (2012). The Discourse Analysis of jiushi in Taiwan Mandarin. The 6th Conference on Language, Discourse, and Cognition, National Taiwan University, Taiwan, Taipei, Taiwan.</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>Yang, Chen-Yi. (2010). The Grammaticalizaiton of Bai in Mandarin Chinese: "do something but get nothing" vs. "do nothing but get something". The 43rd International Conference on Sino-Tibetan Languages and Linguistics, Lund University, Sweden.</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>Yang, Chen-Yi. (2010). Sociolinguistic Perspectives on Sound Variation of /f/ and /hw/ in Taiwan Mandarin. The 1st International Symposium on Chinese Language and Discourse, UCLA, Los Angeles, USA.</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>Yang, Chen-Yi. (2008). Sociolinguistic Variation of Mandarin Chinese /f/ and /hw/ in Taiwan. Paper presented at theNational Conference on Linguistics (NCL 2008), National Chiayi University, Taiwan, May 2-3, 2008.</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>Rau, D. Victoria, Hui-Huan Ann Chang, Yin-Sheng Tai, Chen-Yi Yang, Yi-Hui Lin, Chia-Chi Yang & Maa-Neu Dong. (2007). Teaching and learning an endangered language in Taiwan. Paper presented at the International Conference on Austronesian Endangered Language Documentation, Providence University, Taiwan, June 5-7, 2007. (NSC-95-2411-126-007)</span></li>
             </ul>
 
             <h5>
               專書篇章 Book Chapters
             </h5>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Rau, D. Victoria, Hui-Huan Ann Chang, Yin-Sheng Tai, Chen-Yi Yang, Yi-Hui Lin, Chia-Chi Yang & Maa-Neu Dong. (2008) Teaching and learning an endangered language in Taiwan, In Documenting and Revitalizing Austronesian Language. Eds. By D. Victoria Rau & Margaret Florey, special volume for Language Documentation and Conservation, University of Hawai'i. 162-188. http://nflrc.hawaii.edu/ldc/sp01/ (NSC-95-2411-126-007). ISBN 978-0-8248-3309-1</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>Rau, D. Victoria, Hui-Huan Ann Chang, Yin-Sheng Tai, Chen-Yi Yang, Yi-Hui Lin, Chia-Chi Yang & Maa-Neu Dong. (2008) Teaching and learning an endangered language in Taiwan, In Documenting and Revitalizing Austronesian Language. Eds. By D. Victoria Rau & Margaret Florey, special volume for Language Documentation and Conservation, University of Hawai'i. 162-188. http://nflrc.hawaii.edu/ldc/sp01/ (NSC-95-2411-126-007). ISBN 978-0-8248-3309-1</span></li>
             </ul>
 
             <h5>
               電子報 Electronic News Reporting
             </h5>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span>楊真宜（2021）。〈一份傳承百年的犁頭山水話〉。《新作坊》電子報Vol.96，科技部。(https://www.hisp.ntu.edu.tw/report_paper?id=407)</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>楊真宜（2021）。〈轉動吧！百年水礱間〉《新作坊》電子報Vol.95，科技部。(https://www.hisp.ntu.edu.tw/news/epapers/108/articles/403)</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>楊真宜（2021）。〈一份傳承百年的犁頭山水話〉。《新作坊》電子報Vol.96，科技部。(https://www.hisp.ntu.edu.tw/report_paper?id=407)</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>楊真宜（2021）。〈轉動吧！百年水礱間〉《新作坊》電子報Vol.95，科技部。(https://www.hisp.ntu.edu.tw/news/epapers/108/articles/403)</span></li>
             </ul>
 
             <h5>
               技術報告及其它 Technical Report & Others
             </h5>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span>楊真宜 (2018)。〈面臨傳承危機之國家語言〉。文化部國家語言發展法計畫研擬期中報告，國立台中教育大學委託撰寫。</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>楊真宜 (2018)。〈面臨傳承危機之國家語言〉。文化部國家語言發展法計畫研擬期中報告，國立台中教育大學委託撰寫。</span></li>
             </ul>
 
             <h5>
               專題演講 Invited Talks
             </h5>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span>A Sociolinguistic Description of Language Change in Taiwan. Department of English Language, Literature and Linguistics. Providence University, Taichung, Taiwan. May 12, 2020.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>A Survey of Junior High Students' Language Proficiency, Use and Attitude in Taiwan: Mandarin Chinese, Indigenous Languages and English. Linguistics Department Tuesday Seminar. University of Hawai'i at Mānoa, Hawai'i, USA, May 6, 2014.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Language is Not Only a Language. Department of English Language, Literature and Linguistics. Providence University, Taichung, Taiwan. October 2010.</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>A Sociolinguistic Description of Language Change in Taiwan. Department of English Language, Literature and Linguistics. Providence University, Taichung, Taiwan. May 12, 2020.</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>A Survey of Junior High Students' Language Proficiency, Use and Attitude in Taiwan: Mandarin Chinese, Indigenous Languages and English. Linguistics Department Tuesday Seminar. University of Hawai'i at Mānoa, Hawai'i, USA, May 6, 2014.</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>Language is Not Only a Language. Department of English Language, Literature and Linguistics. Providence University, Taichung, Taiwan. October 2010.</span></li>
             </ul>
 
         </div>
