--- a/paticipation-details.html
+++ b/paticipation-details.html
@@ -46,11 +46,11 @@
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
-      <h1 class="sitename">Chen-Yi Yang</h1>
+      <h1 class="sitename">Chen-Yi Yang, Ph.D.</h1>
     </a>
 
     <div class="social-links text-center">
-      <span>楊真宜 (Karen)</span>
+      <span>楊真宜 博士 (Karen)</span>
     </div>
 
     <nav id="navmenu" class="navmenu">
@@ -85,14 +85,20 @@
     <section id="service-details" class="service-details section">
       <div class="container">
         <div class="row gy-4">
-          <div class="col-lg-12" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
+            <div class="services-list">
+              <img src="assets/img/photo-1.jpg" alt="" class="img-fluid services-img">
+              <img src="assets/img/photo-2.jpg" alt="" class="img-fluid services-img">
+            </div>
+          </div>
+          <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
             <h3>學術參與 Acdamic Participation</h3>
             <hr>
             <h5>
               委員擔任
             </h5>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span></span></li>
+              <li><i class="bi bi-caret-right"></i> <span></span></li>
             </ul>
         </div>
       </div>
