--- a/project-details.html
+++ b/project-details.html
@@ -46,11 +46,11 @@
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
-      <h1 class="sitename">Chen-Yi Yang</h1>
+      <h1 class="sitename">Chen-Yi Yang, Ph.D.</h1>
     </a>
 
     <div class="social-links text-center">
-      <span>楊真宜 (Karen)</span>
+      <span>楊真宜 博士 (Karen)</span>
     </div>
 
     <nav id="navmenu" class="navmenu">
@@ -85,20 +85,26 @@
     <section id="service-details" class="service-details section">
       <div class="container">
         <div class="row gy-4">
-          <div class="col-lg-12" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
+            <div class="services-list">
+              <img src="assets/img/photo-1.jpg" alt="" class="img-fluid services-img">
+              <img src="assets/img/photo-2.jpg" alt="" class="img-fluid services-img">
+            </div>
+          </div>
+          <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
             <h3>研究計畫 Research Projects</h3>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span>113年度教育部教學實踐研究計畫【GIS故事地圖與中英翻譯課程之跨域應用】(2024-2025) | 教育部 (PED1137365)</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>教育部人文社會與產業實務創新鏈結計畫 第一期【從教室到社區：中英翻譯與GIS故事地圖之跨域應用2.0】(2023-2025) | 教育部 (MOE-112-1-C-005)</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>教育部人文社會與產業實務創新鏈結計畫 第零期【從教室到社區：中英翻譯與GIS故事地圖之跨域應用】(2023) | 教育部 (MOE-112-C-022)</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>科技部人文創新與社會實踐計畫【新竹智慧城鄉創生計畫：地方活力與能力建構】(2021) | 國立清華大學 (MOST 108-2420-H-007-010-HS1)</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>科技部人文創新與社會實踐計畫【灣岸創生：高雄過渡社區的記憶再現與創新轉型】(2018-2020) | 國立中山大學 (MOST 107-2420-H-110-004-HS1)</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Grammaticalization Cycles of Nasal Diminutive Suffixes in Chinese【鼻化小稱語法化輪迴】(2015) | 國科會 (NSC102-2410-H-007-023-MY2)</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>國科會補助博士生赴國外研究成果報告【台灣年輕人的語言能力、使用與認同之探究】(2014) | 國科會 (NSC102-2917-I-007-026)</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>A Study of the Indigenous Language Teaching Situation in Elementary and Junior High Schools in Taiwan【臺灣地區國民中小學本土語言教學現況之整合型研究】(2011-2013) | 國家教育研究院 (NAER-100-11-A-1-01-00-2-01)</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Tsing-Hua Corpus and Study of Spoken Chinese: part II【清華語料庫與華語口語研究】(2009-2011) | 教育部 (99N2922E1)</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>The Study of the Diachronic variation of Southern Min (Taiwanese)【台灣閩南語的歷時演變】(2009-2010) | 國科會 (NSC98-2923-H-007-001-MY3)</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Preservation of Endangered Language-Yami【瀕危雅美語之保存暨典藏、E-learning網站建構】(2006-2007) | 國科會、原民會 (NSC95-2411-H-126 -007) http://yamiproject.cs.pu.edu.tw/yami , http://yamiproject.cs.pu.edu.tw/elearn/?&lang=zhtw</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>113年度教育部教學實踐研究計畫【GIS故事地圖與中英翻譯課程之跨域應用】(2024-2025) | 教育部 (PED1137365)</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>教育部人文社會與產業實務創新鏈結計畫 第一期【從教室到社區：中英翻譯與GIS故事地圖之跨域應用2.0】(2023-2025) | 教育部 (MOE-112-1-C-005)</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>教育部人文社會與產業實務創新鏈結計畫 第零期【從教室到社區：中英翻譯與GIS故事地圖之跨域應用】(2023) | 教育部 (MOE-112-C-022)</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>科技部人文創新與社會實踐計畫【新竹智慧城鄉創生計畫：地方活力與能力建構】(2021) | 國立清華大學 (MOST 108-2420-H-007-010-HS1)</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>科技部人文創新與社會實踐計畫【灣岸創生：高雄過渡社區的記憶再現與創新轉型】(2018-2020) | 國立中山大學 (MOST 107-2420-H-110-004-HS1)</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>Grammaticalization Cycles of Nasal Diminutive Suffixes in Chinese【鼻化小稱語法化輪迴】(2015) | 國科會 (NSC102-2410-H-007-023-MY2)</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>國科會補助博士生赴國外研究成果報告【台灣年輕人的語言能力、使用與認同之探究】(2014) | 國科會 (NSC102-2917-I-007-026)</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>A Study of the Indigenous Language Teaching Situation in Elementary and Junior High Schools in Taiwan【臺灣地區國民中小學本土語言教學現況之整合型研究】(2011-2013) | 國家教育研究院 (NAER-100-11-A-1-01-00-2-01)</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>Tsing-Hua Corpus and Study of Spoken Chinese: part II【清華語料庫與華語口語研究】(2009-2011) | 教育部 (99N2922E1)</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>The Study of the Diachronic variation of Southern Min (Taiwanese)【台灣閩南語的歷時演變】(2009-2010) | 國科會 (NSC98-2923-H-007-001-MY3)</span></li>
+              <li><i class="bi bi-caret-right"></i> <span>Preservation of Endangered Language-Yami【瀕危雅美語之保存暨典藏、E-learning網站建構】(2006-2007) | 國科會、原民會 (NSC95-2411-H-126 -007) http://yamiproject.cs.pu.edu.tw/yami , http://yamiproject.cs.pu.edu.tw/elearn/?&lang=zhtw</span></li>
             </ul>
         </div>
       </div>
