--- a/teaching-details.html
+++ b/teaching-details.html
@@ -46,11 +46,11 @@
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
-      <h1 class="sitename">Chen-Yi Yang</h1>
+      <h1 class="sitename">Chen-Yi Yang, Ph.D.</h1>
     </a>
 
     <div class="social-links text-center">
-      <span>楊真宜 (Karen)</span>
+      <span>楊真宜 博士 (Karen)</span>
     </div>
 
     <nav id="navmenu" class="navmenu">
@@ -85,26 +85,32 @@
     <section id="service-details" class="service-details section">
       <div class="container">
         <div class="row gy-4">
-          <div class="col-lg-12" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
+            <div class="services-list">
+              <img src="assets/img/photo-1.jpg" alt="" class="img-fluid services-img">
+              <img src="assets/img/photo-2.jpg" alt="" class="img-fluid services-img">
+            </div>
+          </div>
+          <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
             <h3>教學經歷 Teaching Experiences</h3>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span><b>[2017 Fall, TA]</b> Pragmatics, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
-              <li><i class="bi bi-check-circle"></i> <span><b>[2016, Fall, TA]</b> Sociolinguistics, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
-              <li><i class="bi bi-check-circle"></i> <span><b>[2015 Spring, TA]</b> Grammaticalization & Lexicalization, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
-              <li><i class="bi bi-check-circle"></i> <span><b>[2012 Fall, Lecturer]</b> Reading and Writing in English, Department of English Instruction, National Hsinchu University of Education, Taiwan</span></li>
-              <li><i class="bi bi-check-circle"></i> <span><b>[2012 Fall, Lecturer]</b> English Proficiency Development, Department of English Instruction, National Hsinchu University of Education, Taiwan</span></li>
-              <li><i class="bi bi-check-circle"></i> <span><b>[2012 Fall, TA]</b> Seminar in Pragmatics, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
-              <li><i class="bi bi-check-circle"></i> <span><b>[2012 Spring, Lecturer]</b> Speech and Communication in English, Department of English Instruction, National Hsinchu University of Education, Taiwan</span></li>
-              <li><i class="bi bi-check-circle"></i> <span><b>[2012 Spring, Lecturer]</b> Grammar and Writing in English, Department of English Instruction, National Hsinchu University of Education, Taiwan</span></li>
-              <li><i class="bi bi-check-circle"></i> <span><b>[2012 Spring, TA]</b> Introduction to Linguistics, Interdisciplinary Program of Humanities and Social Sciences, National Tsing Hua University, Taiwan</span></li>
-              <li><i class="bi bi-check-circle"></i> <span><b>[2011 Fall, Lecturer]</b> Listening and Speaking in English, Department of English Instruction, National Hsinchu University of Education, Taiwan</span></li>
-              <li><i class="bi bi-check-circle"></i> <span><b>[2011 Fall, Lecturer]</b> Reading and Writing in English, Department of English Instruction, National Hsinchu University of Education, Taiwan</span></li>
-              <li><i class="bi bi-check-circle"></i> <span><b>[2011 Fall, TA]</b> Discourse Analysis, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
-              <li><i class="bi bi-check-circle"></i> <span><b>[2011 Spring, TA]</b> Seminar in Pragmatics, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
-              <li><i class="bi bi-check-circle"></i> <span><b>[2010 Fall, TA]</b> Contrastive Analysis and Error Analysis, Graduate Institute of Foreign Language and Literature, National Tsing Hua University, Taiwan</span></li>
-              <li><i class="bi bi-check-circle"></i> <span><b>[2010 Spring, TA]</b> Syntax, Department of Foreign Language and Literature, National Tsing Hua University, Taiwan</span></li>
-              <li><i class="bi bi-check-circle"></i> <span><b>[2007 - 2008, TA]</b> English listening and speaking (Undergraduate), Providence University, Taiwan</span></li>
-              <li><i class="bi bi-check-circle"></i> <span><b>[2007 - 2008, TA]</b> Linguistics, Department of English Language, Literature and Linguistics, Providence University, Taiwan</span></li>
+              <li><i class="bi bi-caret-right"></i> <span><b>[2017 Fall, TA]</b> Pragmatics, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
+              <li><i class="bi bi-caret-right"></i> <span><b>[2016, Fall, TA]</b> Sociolinguistics, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
+              <li><i class="bi bi-caret-right"></i> <span><b>[2015 Spring, TA]</b> Grammaticalization & Lexicalization, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
+              <li><i class="bi bi-caret-right"></i> <span><b>[2012 Fall, Lecturer]</b> Reading and Writing in English, Department of English Instruction, National Hsinchu University of Education, Taiwan</span></li>
+              <li><i class="bi bi-caret-right"></i> <span><b>[2012 Fall, Lecturer]</b> English Proficiency Development, Department of English Instruction, National Hsinchu University of Education, Taiwan</span></li>
+              <li><i class="bi bi-caret-right"></i> <span><b>[2012 Fall, TA]</b> Seminar in Pragmatics, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
+              <li><i class="bi bi-caret-right"></i> <span><b>[2012 Spring, Lecturer]</b> Speech and Communication in English, Department of English Instruction, National Hsinchu University of Education, Taiwan</span></li>
+              <li><i class="bi bi-caret-right"></i> <span><b>[2012 Spring, Lecturer]</b> Grammar and Writing in English, Department of English Instruction, National Hsinchu University of Education, Taiwan</span></li>
+              <li><i class="bi bi-caret-right"></i> <span><b>[2012 Spring, TA]</b> Introduction to Linguistics, Interdisciplinary Program of Humanities and Social Sciences, National Tsing Hua University, Taiwan</span></li>
+              <li><i class="bi bi-caret-right"></i> <span><b>[2011 Fall, Lecturer]</b> Listening and Speaking in English, Department of English Instruction, National Hsinchu University of Education, Taiwan</span></li>
+              <li><i class="bi bi-caret-right"></i> <span><b>[2011 Fall, Lecturer]</b> Reading and Writing in English, Department of English Instruction, National Hsinchu University of Education, Taiwan</span></li>
+              <li><i class="bi bi-caret-right"></i> <span><b>[2011 Fall, TA]</b> Discourse Analysis, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
+              <li><i class="bi bi-caret-right"></i> <span><b>[2011 Spring, TA]</b> Seminar in Pragmatics, Graduate Institute of Linguistics, National Tsing Hua University, Taiwan</span></li>
+              <li><i class="bi bi-caret-right"></i> <span><b>[2010 Fall, TA]</b> Contrastive Analysis and Error Analysis, Graduate Institute of Foreign Language and Literature, National Tsing Hua University, Taiwan</span></li>
+              <li><i class="bi bi-caret-right"></i> <span><b>[2010 Spring, TA]</b> Syntax, Department of Foreign Language and Literature, National Tsing Hua University, Taiwan</span></li>
+              <li><i class="bi bi-caret-right"></i> <span><b>[2007-2008, TA]</b> English listening and speaking (Undergraduate), Providence University, Taiwan</span></li>
+              <li><i class="bi bi-caret-right"></i> <span><b>[2007-2008, TA]</b> Linguistics, Department of English Language, Literature and Linguistics, Providence University, Taiwan</span></li>
             </ul>
         </div>
       </div>
