Fix bugs for current content

--- a/teaching-details.html
+++ b/teaching-details.html
@@ -75,7 +75,7 @@
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Teaching Details</li>
+            <li class="current">Teaching</li>
           </ol>
         </nav>
       </div>
