--- a/cooperation-details.html
+++ b/cooperation-details.html
@@ -75,7 +75,7 @@
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Cooperation Details</li>
+            <li class="current">Cooperations</li>
           </ol>
         </nav>
       </div>
