--- a/paticipation-details.html
+++ b/paticipation-details.html
@@ -75,7 +75,7 @@
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Paticipation Details</li>
+            <li class="current">Paticipations</li>
           </ol>
         </nav>
       </div>
