--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -74,7 +74,7 @@
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Portfolio Details</li>
+            <li class="current">Portfolios</li>
           </ol>
         </nav>
       </div>
