--- a/project-details.html
+++ b/project-details.html
@@ -75,7 +75,7 @@
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Project Details</li>
+            <li class="current">Projects</li>
           </ol>
         </nav>
       </div>
