Revise format for the content

--- a/index.html
+++ b/index.html
@@ -257,8 +257,12 @@
               <p><em>Postdoctoral Researcher, Regional Innovation Center, National Tsing Hua University, Hsinchu, Taiwan.</em></p>
               <ul style="list-style-type: none;">
                 <li><i class="bi bi-briefcase"></i> 科技部人文創新與社會實踐計畫</li>
-                <li><i class="bi bi-briefcase"></i> 新竹智慧城鄉創生計畫：地方活力與能力建構</li>
-                <li><i class="bi bi-briefcase"></i> 計畫編號：MOST 108-2420-H-007-010-HS1</li>
+                <li>
+                  <ul style="list-style-type: none;">
+                    <li><i class="bi bi-arrow-right-short"></i> 新竹智慧城鄉創生計畫：地方活力與能力建構</li>
+                    <li><i class="bi bi-arrow-right-short"></i> 計畫編號：MOST 108-2420-H-007-010-HS1</li>
+                  </ul>
+                </li>
               </ul>
             </div>
 
@@ -278,8 +282,12 @@
               <p><em>Postdoctoral Researcher, Social Engagement Center, National Sun Yat-sen University, Kaohsiung, Taiwan.</em></p>
               <ul style="list-style-type: none;">
                 <li><i class="bi bi-briefcase"></i> 科技部人文創新與社會實踐計畫</li>
-                <li><i class="bi bi-briefcase"></i> 灣岸創生：高雄過渡社區的記憶再現與創新轉型</li>
-                <li><i class="bi bi-briefcase"></i> 計畫編號：MOST 107-2420-H-110-004-HS1</li>
+                <li>
+                  <ul style="list-style-type: none;">
+                    <li><i class="bi bi-arrow-right-short"></i> 灣岸創生：高雄過渡社區的記憶再現與創新轉型</li>
+                    <li><i class="bi bi-arrow-right-short"></i> 計畫編號：MOST 107-2420-H-110-004-HS1</li>
+                  </ul>
+                </li>
               </ul>
             </div>
 
